--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kanal-service",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ibexid.github.io/kanal-service",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -17,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
     "node-sass": "^7.0.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
